# atomID

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  coverage.yml  docs.yml
change_log/: index.html
contributing/: index.html
credits/: index.html
docs/: code_of_conduct.md  contributing.md  credits.md  index.md  quickstart.md
examples/: 1_Getting_Started.ipynb  2_Setting_Crystal_Structure.ipynb  3_Identify_Point_Defects.ipynb  4_Set_Point_Defects.ipynb
quickstart/: index.html
search/: search_index.json
src/: __init__.py  atomid.py  crystal_annotate.py  general_utils.py
src/atomid/: annotate.py  annotate_crystals.py  atomid.py  general_utils.py
src/atomid/crystal/: structure_identification.py
src/atomid/line_defect_analysis/: dislocation_extraction.py
src/atomid/plane_defect_analysis/: grain_segmentation.py
src/atomid/point_defect_analysis/: wigner_seitz_method.py
src/crystal/: system.py
src/crystal_analysis/: structure_identification.py
src/point_defect_analysis/: wigner_seitz_method.py
tests/: test_annotate_crystals.py  test_main.py  test_point_defect_identification.py
tests/data/bcc/Fe/defect/interstitial/initial/: Fe_interstitial.lmp  Fe_interstitial.poscar  Fe_interstitial.ttl
tests/data/bcc/Fe/defect/substitution/initial/: Fe_substitution.lmp  Fe_substitution.poscar  Fe_substitution.ttl
tests/data/bcc/Fe/defect/vacancy/initial/: Fe_vacancy.lmp  Fe_vacancy.poscar  Fe_vacancy.ttl
tests/data/bcc/Fe/no_defect/initial/: Fe.lmp  Fe.poscar  Fe.ttl
tests/data/diamond/Si/defect/interstitial/initial/: Si_interstitial.lmp  Si_interstitial.poscar  Si_interstitial.ttl
tests/data/diamond/Si/defect/substitution/initial/: Si_substitution.lmp  Si_substitution.poscar  Si_substitution.ttl
tests/data/diamond/Si/defect/vacancy/initial/: Si_vacancy.lmp  Si_vacancy.poscar  Si_vacancy.ttl
tests/data/diamond/Si/no_defect/initial/: Si.lmp  Si.poscar  Si.ttl
tests/data/fcc/Al/defect/interstitial/initial/: Al_interstitial.lmp  Al_interstitial.poscar  Al_interstitial.ttl
tests/data/fcc/Al/defect/substitution/initial/: Al_substitution.lmp  Al_substitution.poscar  Al_substitution.ttl
tests/data/fcc/Al/defect/vacancy/: Al_vacancy.cif  Al_vacancy.lmp  Al_vacancy.ttl
tests/data/fcc/Al/defect/vacancy/initial/: Al_vacancy.lmp  Al_vacancy.poscar  Al_vacancy.ttl
tests/data/fcc/Al/no_defect/: Al.cif  Al.lmp  Al.ttl
tests/data/fcc/Al/no_defect/initial/: Al.lmp  Al.poscar  Al.ttl
tests/data/grain_boundary/: fe_grain_boundary.poscar
tests/data/hcp/Mg/defect/interstitial/initial/: Mg_interstitial.lmp  Mg_interstitial.poscar  Mg_interstitial.ttl
tests/data/hcp/Mg/defect/substitution/initial/: Mg_substitution.lmp  Mg_substitution.poscar  Mg_substitution.ttl
tests/data/hcp/Mg/defect/vacancy/: Mg_vacancy.cif  Mg_vacancy.lmp  Mg_vacancy.ttl
tests/data/hcp/Mg/defect/vacancy/initial/: Mg_vacancy.lmp  Mg_vacancy.poscar  Mg_vacancy.ttl
tests/data/hcp/Mg/no_defect/: Mg.cif  Mg.lmp  Mg.ttl
tests/data/hcp/Mg/no_defect/initial/: Mg.lmp  Mg.poscar  Mg.ttl
tests/utils/: __init__.py  compare_rdf.py
